remove fake link I originally put in to test text style

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 
 <p>Previously I've worked in a large urban public library, an academic medical library, a botany library, and a business library; and before library school in several small suburban public libraries, a bustling undergraduate library, and a university archive. I received my MSLIS from Drexel and a Master's in Computer Science from NYU. My BA is from Yale (German Studies with a concentration in History of Art) and I did a year at the Universit&auml;t T&uuml;bingen.</p>
 
-<p>My personal interests include classical music, foreign languages (especially German, French, and Dutch), playing the piano, urbanism, and (of course) reading.<a href="https://fakesite.com">fake site</a></p></div></div>
+<p>My personal interests include classical music, foreign languages (especially German, French, and Dutch), playing the piano, urbanism, and (of course) reading.</p></div></div>
 </body>
 </html>
