--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="navbutton"><a href="links.html">Links</a></div>
 </div>
 <div id="maintext">
-<p>I'm the Assistant University Librarian for Digital Library Development &amp; Systems at the <a href="https://www.library.upenn.edu">University of Pennsylvania Libraries</a> (currently Acting Associate University Librarian for Library Technology Services). My interests include information architecture, extraction, and retrieval; discovery systems and integrated library systems; digital preservation; content strategy; and more.</p>
+<p>I'm the Associate Vice Provost for Technology &amp; Digital Initiatives at the <a href="https://www.library.upenn.edu">University of Pennsylvania Libraries</a> (currently Acting Associate University Librarian for Library Technology Services). My interests include information architecture, extraction, and retrieval; discovery systems and integrated library systems; digital preservation; content strategy; and more.</p>
 
 <p>Previously I've worked in a large urban public library, an academic medical library, a botany library, and a business library; and before library school in several small suburban public libraries, a bustling undergraduate library, and a university archive. I received my MSLIS from Drexel and a Master's in Computer Science from NYU. My BA is from Yale (German Studies with a concentration in History of Art) and I did a year at the Universit&auml;t T&uuml;bingen.</p>
 
